--- a/file1.html
+++ b/file1.html
@@ -1,4 +1,4 @@
 <h1> welcome to file1.html</h1>
 <h1> These changes are done by saranya</h1>
 
-creating own project in alpha repo
+<h1> changing made in file1.html</h1>
